--- a/rayCastingDemo/index.html
+++ b/rayCastingDemo/index.html
@@ -35,11 +35,11 @@
 
     // map
     const MAP_SIZE = 32;
-    const MAP_SCALE = 64;
+    const MAP_SCALE = 128;
     const MAP_RANGE = MAP_SCALE * MAP_SIZE;
     const MAP_SPEED = (MAP_SCALE / 2) / 10;
     var map = [
-        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+        1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
         1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
         1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
         1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
@@ -70,8 +70,8 @@
         1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
         1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
         1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
-        1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+
 
     ];
     var showMap = false;
@@ -106,8 +106,8 @@
     });
 
     // screen
-    const WIDTH = 300, HALF_WIDTH = 150;
-    const HEIGHT = 300, HALF_HEIGHT = 150;
+    const WIDTH = Math.floor(window.innerHeight / 3), HALF_WIDTH = WIDTH / 2;
+    const HEIGHT = Math.floor(window.innerHeight / 3), HALF_HEIGHT = HEIGHT / 2;
 
     // camera
     const DOUBLE_PI = Math.PI * 2;
@@ -119,7 +119,7 @@
     const WALLS = [];
 
     // load wall textures
-    for (var filename = 0; filename < 2; filename++) {
+    for (var filename = 0; filename < 3; filename++) {
         var img = document.createElement('img');
         img.src = "static/walls/" + filename + ".png";
         WALLS.push(img);
@@ -143,16 +143,16 @@
         // update player position
         var playerOffsetX = Math.sin(playerAngle) * MAP_SPEED;
         var playerOffsetY = Math.cos(playerAngle) * MAP_SPEED;
-        var mapTargetX = Math.floor(playerY / MAP_SCALE) * MAP_SIZE + Math.floor((playerX + playerOffsetX * playerMoveX) / MAP_SCALE)
-        var mapTargetY = Math.floor((playerY + playerOffsetY * playerMoveY) / MAP_SCALE) * MAP_SIZE + Math.floor(playerX / MAP_SCALE)
+        var mapTargetX = Math.floor(playerY / MAP_SCALE) * MAP_SIZE + Math.floor((playerX + playerOffsetX * playerMoveX * 5) / MAP_SCALE)
+        var mapTargetY = Math.floor((playerY + playerOffsetY * playerMoveY * 5) / MAP_SCALE) * MAP_SIZE + Math.floor(playerX / MAP_SCALE)
 
         if (playerMoveX && map[mapTargetX] == 0) playerX += playerOffsetX * playerMoveX;
         if (playerMoveY && map[mapTargetY] == 0) playerY += playerOffsetY * playerMoveY;
         if (playerMoveAngle) playerAngle += 0.06 * playerMoveAngle;
 
         // Calculate map & player offsets
-        var mapOffsetX = Math.floor(canvas.width / 2 - 150);
-        var mapOffsetY = 0;
+        var mapOffsetX = Math.floor(canvas.width / 2 - HALF_WIDTH);
+        var mapOffsetY = Math.floor(canvas.height / 2 - HALF_HEIGHT);
         var playerMapX = (playerX / MAP_SCALE) * 5 + mapOffsetX;
         var playerMapY = (playerY / MAP_SCALE) * 5 + mapOffsetY;
 
@@ -183,7 +183,7 @@
                 if (currentSin <= 0) mapTargetX += rayDirectionX;
                 var targetSquare = mapTargetY * MAP_SIZE + mapTargetX;
                 if (targetSquare < 0 || targetSquare >= map.length - 1) break;
-                if (map[targetSquare] != 0) break;
+                if (map[targetSquare] != 0) { textureY = map[targetSquare]; break;};
                 rayEndX += rayDirectionX * MAP_SCALE;
             }
             textureEndY = rayEndY;
@@ -200,26 +200,28 @@
                 if (currentCos <= 0) mapTargetY += rayDirectionY;
                 var targetSquare = mapTargetY * MAP_SIZE + mapTargetX;
                 if (targetSquare < 0 || targetSquare >= map.length - 1) break;
-                if (map[targetSquare] != 0) break;
+                if (map[targetSquare] != 0) { textureX = map[targetSquare]; break;};
                 rayEndY += rayDirectionY * MAP_SCALE;
             }
             textureEndX = rayEndX;
 
             // render 3D projection
             var depth = verticalDepth < horizontalDepth ? verticalDepth : horizontalDepth;
+            var textureImage = verticalDepth < horizontalDepth ? textureY : textureX;
             var textureOffset = verticalDepth < horizontalDepth ? textureEndY : textureEndX;
             textureOffset = textureOffset - Math.floor(textureOffset / MAP_SCALE) * MAP_SCALE;
             depth *= Math.cos(playerAngle - currentAngle);
-            var wallHeight = Math.min(Math.floor(MAP_SCALE * 300 / (depth + 0.0001)), HEIGHT);
+            var wallHeight = Math.min(Math.floor(MAP_SCALE * 300 / (depth + 0.0001)), 50000);
             // ctx.fillStyle = verticalDepth < horizontalDepth ? '#bbb' : '#aaa';
             // ctx.fillRect(mapOffsetX + ray, mapOffsetY + (HALF_HEIGHT - wallHeight / 2), 1, wallHeight);
 
+
             ctx.drawImage(
-                WALLS[1],
+                WALLS[textureImage],
                 textureOffset,  // Source img x offset
                 0,  // Source img y offset
                 1, // Source img width
-                64, // Source img height
+                128, // Source img height
                 mapOffsetX + ray, // Target image x offset
                 mapOffsetY + (HALF_HEIGHT - Math.floor(wallHeight / 2)), // Target image y offset
                 1, // Target image width
@@ -259,6 +261,11 @@
             ctx.lineTo(playerMapX + Math.sin(playerAngle) * 5, playerMapY + Math.cos(playerAngle) * 5);
             ctx.stroke();
         }
+
+        // fix wall layout
+        ctx.fillStyle = 'white';
+        ctx.fillRect(0, 0, canvas.width, mapOffsetY);
+        ctx.fillRect(0, mapOffsetY + WIDTH, canvas.width, canvas.width - mapOffsetY + WIDTH);
 
         //inf loop
         setTimeout(gameLoop, cycleDelay);
